fix z-index bug preventing nav/menu pointer events on resize

--- a/website/styles/Layout.module.css
+++ b/website/styles/Layout.module.css
@@ -22,14 +22,10 @@
   height: 0;
   transform: none !important;
   position: sticky !important;
-  z-index: 200;
+  z-index: 200 !important;
 }
 
 .view {
   width: 100vw;
   height: 100vh;
-}
-
-.pointer {
-  cursor: pointer !important;
 }
